--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -23,14 +23,14 @@ sourceSets {
 task integTest(type: Test) {
     description = "Runs integration tests."
 
-    testClassesDir = sourceSets.integTest.output.classesDir
+    testClassesDirs = sourceSets.integTest.output.classesDirs
     classpath = sourceSets.integTest.runtimeClasspath
 
     maxHeapSize = '1024m'
 
     // ensure we don't overwrite default report directories used by 'test' task
-    reports.html.destination = "${project.buildDir}/reports/integTest"
-    reports.junitXml.destination = "${project.buildDir}/integTest-results"
+    //reports.html = "${project.buildDir}/reports/integTest"
+   //reports.junitXml = "${project.buildDir}/integTest-results"
     binResultsDir = file("${project.buildDir}/integTest-results/binary/integTest")
 
     // always run integration tests after unit tests in order to fail fast
