--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'sagan'
 
-include 'sagan-common', 'sagan-site', 'sagan-indexer', 'sagan-client'
+//include 'sagan-common', 'sagan-site', 'sagan-indexer', 'sagan-client'
+
+include 'sagan-common','sagan-site', 'sagan-client'
